# kelri-bot

./: Cargo.toml  README.md
src/: bot.rs  config.rs  main.rs
