[package]
name = "kelri-bot"
authors = ["Luna Borella <ulfrthewolf@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.4.0"
simple_logger = "2.2.0"
log = "0.4.17"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
strip = true
lto = true
